# majestic-redux-manager

./: .gitignore  index.html  latest.json  package-lock.json  package.json  version.json  vite.config.ts
admin-worker/: wrangler.jsonc
admin-worker/src/: index.js
docs/: ADMIN_RELEASE_WORKFLOW.md  DISCORD_ADMIN_SETUP.md  MVP_BACKEND.md
public/: redux.example.json
scripts/: create-latest-json.bat  deploy-admin-worker.bat  update-manifest.mjs
src/: main.tsx  routeTree.gen.ts  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json  updater.key  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AppSidebar.tsx  InstallProgressModal.tsx  ReduxCard.tsx
src/lib/: mockData.ts  tauri.ts
src/routes/: __root.tsx  backups.tsx  index.tsx  settings.tsx
