[package]
name = "app"
version = "0.1.0"
description = "Hardy MODS"
authors = ["Hardy"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["blocking", "json"] }

zip = "2.2"
walkdir = "2.5"
dirs = "6"
